--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -116,4 +116,5 @@ footer {
 
 :root {
     --bg-color: #1a202c;
-    --text-color: #e2e8f0;
+    --text-color: #e2e8f0;
+    --primary-color: #4c51bf;
