--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -126,4 +126,5 @@ body {
     margin: 0;
     font-family: 'Inter', sans-serif;
     background-color: var(--bg-color);
-    color: var(--text-color);
+    color: var(--text-color);
+    display: flex;
