--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -128,4 +128,5 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     display: flex;
-    justify-content: center;
+    justify-content: center;
+    align-items: center;
