--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -137,4 +137,5 @@ body {
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;
+    width: 100%;
