--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -138,4 +138,5 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 100%;
+    max-width: 800px;
