--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -155,4 +155,5 @@ h1 {
     font-size: 2.5rem;
     font-weight: 700;
     color: var(--secondary-color);
-    margin-bottom: 8px;
+    margin-bottom: 8px;
+}
