--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -180,4 +180,5 @@ p {
 }
 
 #audio-upload::-webkit-file-upload-button {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: white;
