--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -181,4 +181,5 @@ p {
 
 #audio-upload::-webkit-file-upload-button {
     background-color: var(--primary-color);
-    color: white;
+    color: white;
+    border: none;
