--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -182,4 +182,5 @@ p {
 #audio-upload::-webkit-file-upload-button {
     background-color: var(--primary-color);
     color: white;
-    border: none;
+    border: none;
+    border-radius: 6px;
