--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -189,4 +189,5 @@ p {
     transition: background-color 0.2s ease;
 }
 
-#audio-upload::-webkit-file-upload-button:hover {
+#audio-upload::-webkit-file-upload-button:hover {
+    background-color: #3b3f8f;
