--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -188,4 +188,5 @@ p {
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
-
+
+#audio-upload::-webkit-file-upload-button:hover {
