--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -194,4 +194,5 @@ p {
 }
 
 button {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: white;
