--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -196,4 +196,5 @@ p {
 button {
     background-color: var(--primary-color);
     color: white;
-    font-weight: 600;
+    font-weight: 600;
+    padding: 10px 20px;
