--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -205,4 +205,5 @@ button {
 }
 
 button:hover:not(:disabled) {
-    background-color: #3b3f8f;
+    background-color: #3b3f8f;
+    transform: translateY(-2px);
