fix: small bug fixes and adjustments

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -206,4 +206,5 @@ button {
 
 button:hover:not(:disabled) {
     background-color: #3b3f8f;
-    transform: translateY(-2px);
+    transform: translateY(-2px);
+}
