--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -209,4 +209,5 @@ button:hover:not(:disabled) {
     transform: translateY(-2px);
 }
 
-button:disabled {
+button:disabled {
+    background-color: #4a5568;
