--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -211,4 +211,5 @@ button:hover:not(:disabled) {
 
 button:disabled {
     background-color: #4a5568;
-    cursor: not-allowed;
+    cursor: not-allowed;
+}
