update imports and exports in modules

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -210,4 +210,5 @@ button:hover:not(:disabled) {
 }
 
 button:disabled {
-    background-color: #4a5568;
+    background-color: #4a5568;
+    cursor: not-allowed;
