--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-    display: flex;
+    display: flex; // updated
     flex-direction: column;
     align-items: center;
     width: 100%;
