--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -1,6 +1,6 @@
 
 // minor change added
-:root {
+:root { // updated
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
     --primary-color: #4c51bf;
