--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -43,7 +43,7 @@ h1 {
     color: var(--secondary-color);
     margin-bottom: 8px;
 }
-
+// minor change added
 p {
     font-size: 1rem;
     color: #a0aec0;
