--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -7,7 +7,7 @@
     --secondary-color: #63b3ed;
     --border-color: #4a5568;
 }
-
+// minor change added
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
