improve project folder organization

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -136,7 +136,7 @@ body {
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; // updated
     align-items: center;
     width: 100%;
     max-width: 800px;
