style: adjust formatting and spacing

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -113,7 +113,7 @@ footer {
 }
 
 // minor change added
-// minor change added
+// minor change added // updated
 :root {
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
