--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -36,7 +36,7 @@ header {
     text-align: center;
     margin-bottom: 24px;
 }
-
+// minor change added
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
