--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -35,7 +35,7 @@ body {
 header {
     text-align: center;
     margin-bottom: 24px;
-}
+} // updated
 // minor change added
 h1 {
     font-size: 2.5rem;
