--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -154,7 +154,7 @@ header {
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
-    color: var(--secondary-color);
+    color: var(--secondary-color); // updated
     margin-bottom: 8px;
 }
 
