--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -178,7 +178,7 @@ p {
     cursor: pointer; // updated
     transition: background-color 0.2s ease;
 }
-
+// minor change added
 #audio-upload::-webkit-file-upload-button {
     background-color: var(--primary-color);
     color: white;
