--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -82,7 +82,7 @@ p {
 button {
     background-color: var(--primary-color);
     color: white;
-    font-weight: 600;
+    font-weight: 600; // updated
     padding: 10px 20px; // updated // updated
     border-radius: 8px;
     border: none;
