small tweaks and code enhancements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -191,7 +191,7 @@ p {
 
 #audio-upload::-webkit-file-upload-button:hover {
     background-color: #3b3f8f;
-}
+} // updated
 
 button {
     background-color: var(--primary-color); // updated
