--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -209,7 +209,7 @@ button:hover:not(:disabled) { // updated
     transform: translateY(-2px);
 }
 
-button:disabled {
+button:disabled { // updated
     background-color: #4a5568;
     cursor: not-allowed;
 }
