--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -9,7 +9,7 @@
 }
 // minor change added
 body {
-    margin: 0;
+    margin: 0; // updated
     font-family: 'Inter', sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
