--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -157,7 +157,7 @@ h1 {
     color: var(--secondary-color); // updated
     margin-bottom: 8px;
 }
-
+// minor change added
 p {
     font-size: 1rem;
     color: #a0aec0;
