--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -1,5 +1,5 @@
 
-// minor change added
+// minor change added // updated
 :root { // updated
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
