--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -211,7 +211,7 @@ button:hover:not(:disabled) { // updated
 
 button:disabled { // updated
     background-color: #4a5568;
-    cursor: not-allowed;
+    cursor: not-allowed; // updated
 }
 
 #visualizer { // updated // updated
