enhance code readability

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -114,7 +114,7 @@ footer {
 
 // minor change added
 // minor change added // updated
-:root {
+:root { // updated
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
     --primary-color: #4c51bf;
