--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -37,7 +37,7 @@ header {
     margin-bottom: 24px;
 } // updated
 // minor change added
-h1 {
+h1 { // updated
     font-size: 2.5rem; // updated
     font-weight: 700;
     color: var(--secondary-color);
