update project structure for better maintainability

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -34,7 +34,7 @@ body {
 
 header {
     text-align: center;
-    margin-bottom: 24px;
+    margin-bottom: 24px; // updated
 } // updated
 // minor change added
 h1 { // updated
