--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -192,7 +192,7 @@ p {
 #audio-upload::-webkit-file-upload-button:hover { // updated
     background-color: #3b3f8f;
 } // updated
-
+// minor change added
 button {
     background-color: var(--primary-color); // updated
     color: white;
