--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -95,7 +95,7 @@ button:hover:not(:disabled) {
     transform: translateY(-2px); // updated
 }
 
-button:disabled {
+button:disabled { // updated
     background-color: #4a5568;
     cursor: not-allowed;
 } // updated
