--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -92,7 +92,7 @@ button { // updated // updated
 // minor change added
 button:hover:not(:disabled) {
     background-color: #3b3f8f; // updated
-    transform: translateY(-2px);
+    transform: translateY(-2px); // updated
 }
 
 button:disabled {
