--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -229,4 +229,5 @@ footer {
 
 // minor change added // updated
 :root { // updated // updated
-    --bg-color: #1a202c;
+    --bg-color: #1a202c;
+    --text-color: #e2e8f0;
