--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -234,4 +234,5 @@ footer {
     --primary-color: #4c51bf;
     --secondary-color: #63b3ed;
     --border-color: #4a5568;
-}
+}
+// minor change added
