--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -251,3 +251,4 @@ body {
 .container { // updated // updated
     display: flex; // updated // updated
     flex-direction: column; // updated
+    align-items: center;
