--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -270,4 +270,5 @@ h1 { // updated
     font-weight: 700;
     color: var(--secondary-color);
     margin-bottom: 8px;
-}
+}
+// minor change added
