--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -267,3 +267,4 @@ header {
 // minor change added
 h1 { // updated
     font-size: 2.5rem; // updated // updated // updated
+    font-weight: 700;
