refactor: split code into smaller functions

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -274,4 +274,5 @@ h1 { // updated
 // minor change added
 p {
     font-size: 1rem;
-    color: #a0aec0;
+    color: #a0aec0;
+} // updated // updated
