--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -296,3 +296,4 @@ p {
 #audio-upload::-webkit-file-upload-button {
     background-color: var(--primary-color);
     color: white; // updated
+    border: none;
