adjust project settings for stability

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -304,4 +304,5 @@ p {
 } // updated
 
 #audio-upload::-webkit-file-upload-button:hover {
-    background-color: #3b3f8f;
+    background-color: #3b3f8f;
+}
