--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -303,4 +303,5 @@ p {
     transition: background-color 0.2s ease; // updated // updated
 } // updated
 
-#audio-upload::-webkit-file-upload-button:hover {
+#audio-upload::-webkit-file-upload-button:hover {
+    background-color: #3b3f8f;
