--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -308,4 +308,5 @@ p {
 }
 
 button { // updated // updated
-    background-color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: white;
