--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -324,4 +324,5 @@ button:hover:not(:disabled) {
 }
 
 button:disabled { // updated
-    background-color: #4a5568;
+    background-color: #4a5568;
+    cursor: not-allowed;
