--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -325,4 +325,5 @@ button:hover:not(:disabled) {
 
 button:disabled { // updated
     background-color: #4a5568;
-    cursor: not-allowed;
+    cursor: not-allowed;
+} // updated // updated
