update dependencies and config files

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -329,4 +329,5 @@ button:disabled { // updated
 } // updated // updated
 
 #visualizer {
-    background-color: #1a202c;
+    background-color: #1a202c;
+    border-radius: 8px;
