refactor: improve naming conventions

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -327,4 +327,5 @@ button:disabled { // updated
     background-color: #4a5568;
     cursor: not-allowed;
 } // updated // updated
-
+
+#visualizer {
