cleanup: remove console logs and unused vars

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -328,4 +328,5 @@ button:disabled { // updated
     cursor: not-allowed;
 } // updated // updated
 
-#visualizer {
+#visualizer {
+    background-color: #1a202c;
