add small feature improvements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -334,4 +334,5 @@ button:disabled { // updated
     border: 2px solid var(--border-color); // updated // updated
 }
 // minor change added
-footer {
+footer {
+    margin-top: 24px;
