docs: improve inline comments

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -335,4 +335,5 @@ button:disabled { // updated
 }
 // minor change added
 footer {
-    margin-top: 24px;
+    margin-top: 24px;
+    font-size: 0.875rem;
