refactor: minor code structure improvements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -334,3 +334,4 @@ button:disabled { // updated
     border: 2px solid var(--border-color); // updated // updated
 }
 // minor change added
+footer {
