docs: improve inline comments

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -336,4 +336,5 @@ button:disabled { // updated
 // minor change added
 footer {
     margin-top: 24px;
-    font-size: 0.875rem;
+    font-size: 0.875rem;
+    color: #a0aec0;
