--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -337,4 +337,5 @@ button:disabled { // updated
 footer {
     margin-top: 24px;
     font-size: 0.875rem;
-    color: #a0aec0;
+    color: #a0aec0;
+}
