--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -345,4 +345,5 @@ footer {
 :root { // updated
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
-    --primary-color: #4c51bf;
+    --primary-color: #4c51bf;
+    --secondary-color: #63b3ed;
