--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -343,4 +343,5 @@ footer {
 // minor change added
 // minor change added // updated
 :root { // updated
-    --bg-color: #1a202c;
+    --bg-color: #1a202c;
+    --text-color: #e2e8f0;
