--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -344,4 +344,5 @@ footer {
 // minor change added // updated
 :root { // updated
     --bg-color: #1a202c;
-    --text-color: #e2e8f0;
+    --text-color: #e2e8f0;
+    --primary-color: #4c51bf;
