--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -346,4 +346,5 @@ footer {
     --bg-color: #1a202c;
     --text-color: #e2e8f0;
     --primary-color: #4c51bf;
-    --secondary-color: #63b3ed;
+    --secondary-color: #63b3ed;
+    --border-color: #4a5568;
