--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -347,4 +347,5 @@ footer {
     --text-color: #e2e8f0;
     --primary-color: #4c51bf;
     --secondary-color: #63b3ed;
-    --border-color: #4a5568;
+    --border-color: #4a5568;
+}
