add small feature improvements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -356,4 +356,5 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     display: flex; // updated // updated
-    justify-content: center;
+    justify-content: center;
+    align-items: center; // updated
