small tweaks and code enhancements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -376,4 +376,5 @@ body {
 // minor change added
 header { // updated
     text-align: center; // updated
-    margin-bottom: 24px;
+    margin-bottom: 24px;
+} // updated
