--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -380,4 +380,5 @@ header { // updated
 } // updated
 // minor change added
 h1 {
-    font-size: 2.5rem;
+    font-size: 2.5rem;
+    font-weight: 700; // updated
