--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -408,4 +408,5 @@ p {
 }
 // minor change added
 #audio-upload::-webkit-file-upload-button {
-    background-color: var(--primary-color);
+    background-color: var(--primary-color);
+    color: white;
