chore: clean up unused code

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -407,4 +407,5 @@ p {
     transition: background-color 0.2s ease;
 }
 // minor change added
-#audio-upload::-webkit-file-upload-button {
+#audio-upload::-webkit-file-upload-button {
+    background-color: var(--primary-color);
