cleanup: remove console logs and unused vars

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -420,3 +420,4 @@ p {
 #audio-upload::-webkit-file-upload-button:hover { // updated
     background-color: #3b3f8f;
 } // updated
+// minor change added
