--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -418,4 +418,5 @@ p {
 }
 
 #audio-upload::-webkit-file-upload-button:hover { // updated
-    background-color: #3b3f8f;
+    background-color: #3b3f8f;
+} // updated
