--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -421,4 +421,5 @@ p {
     background-color: #3b3f8f;
 } // updated
 // minor change added
-button {
+button {
+    background-color: var(--primary-color); // updated
