--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -432,3 +432,4 @@ button {
     transition: background-color 0.2s ease, transform 0.1s ease;
 }
 // minor change added
+button:hover:not(:disabled) { // updated
