update project files and improvements

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -434,4 +434,5 @@ button {
 // minor change added
 button:hover:not(:disabled) { // updated
     background-color: #3b3f8f;
-    transform: translateY(-2px);
+    transform: translateY(-2px);
+}
