--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -433,4 +433,5 @@ button {
 }
 // minor change added
 button:hover:not(:disabled) { // updated
-    background-color: #3b3f8f;
+    background-color: #3b3f8f;
+    transform: translateY(-2px);
