update dependencies and config files

--- a/Audio Visualizer/style.css
+++ b/Audio Visualizer/style.css
@@ -436,4 +436,5 @@ button:hover:not(:disabled) { // updated
     background-color: #3b3f8f;
     transform: translateY(-2px);
 }
-
+
+button:disabled { // updated
